<resources>
    <string name="app_name">Dziennik mechanika</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment" />
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="wykonanie">
        <item>Wykonanie</item>
        <item>NIC</item>
    </string-array>
    <string-array name="silnik">
        <item>Tłokowy</item>
        <item>Turbinowy</item>
    </string-array>
    <string name="header0">" Typ SP "</string>
    <string name="header1">" Data "</string>
    <string name="header2">" Znaki rej. "</string>
    <string name="header3">" Hangar/Linia "</string>
    <string name="header4">" Opis zadania "</string>
    <string name="header5">" Nr zadania "</string>
    <string name="Przeglad_przedlotowy_1">Przegląd przedlotowy: Upewnić się, że wszystkie przełączniki są w pozycji OFF (wyłączone)</string>
    <string name="Przeglad_przedlotowy_2">Przegląd przedlotowy: Upewnić się, że przewody uziemienia są podłączone</string>
    <string name="Przeglad_przedlotowy_3">Przegląd przedlotowy: Sprawdzić poziom oleju </string>
    <string name="Przeglad_przedlotowy_4">Przegląd przedlotowy: Sprawdzić poziom paliwa </string>
    <string name="Przeglad_przedlotowy_5">Przegląd przedlotowy: Sprawdzić połączenia przewodów paliwowych i olejowych, odnotować przesłanki napraw, które byłyby do wykonania podczas przeglądu 50 godzinnego. Przed lotem statku powietrznego usunąć jakiekolwiek przecieki. </string>
    <string name="Przeglad_przedlotowy_6">Przegląd przedlotowy: Otworzyć zawór drenażowy paliwa celem usunięcia nagromadzonej wody i osadu. </string>
    <string name="Przeglad_przedlotowy_7">Przegląd przedlotowy: Upewnić się, że wszystkie osłony i owiewki są na swoim miejscu i że są zabezpieczone. Jeżeli którejkolwiek brakuje lub jest uszkodzona, przed lotem statku powietrznego winna być wykonana naprawa lub wymiana. </string>
    <string name="Przeglad_przedlotowy_8">Przegląd przedlotowy: Sprawdzić układy sterowań zwracając uwagę na ich stan ogólny, zakres przemieszczeń i swobodę działania. </string>
    <string name="Przeglad_przedlotowy_9">Przegląd przedlotowy: Filtr powietrza układu dolotowego winien być sprawdzony i obsłużony zgodnie z zaleceniami producenta płatowca. </string>
    <string name="Uklad_smarowania_1">Układ smarowania: Sprawdzić przewody olejowe na okoliczność przecieków, szczególnie na złączach; co do pewności zamocowania oraz zużycia spowodowanego ocieraniem lub drganiami, co do wgnieceń i pęknięć. </string>
    <string name="Uklad_smarowania_2">Układ smarowania: Wymienić elementy zewnętrznych pełno przepływowych filtrów olejowych. Przed wyrzuceniem zużytych elementów sprawdzić wkłady ze względu na ślady obecności opiłków metalu, co mogłoby świadczyć o wewnętrznym uszkodzeniu silnika. Spuścić i wymienić olej silnikowy. (Informacje dotyczące właściwego oleju znajdują się w Instrukcji Serwisowej Nr 1014). </string>
    <string name="Uklad_smarowania_3">Układ smarowania: W celu dokonania wymiany oleju: </string>
    <string name="Uklad_smarowania_4">Układ smarowania: Uruchom śmigłowiec na ziemi lub wykonaj lot w celu osiągnięcia normalnej temperatury użytkowania. </string>
    <string name="Uklad_smarowania_5">Układ smarowania: Zdemontuj boczne osłony silnika i otwórz zawór szybkiego drenażu na spodzie miski olejowej, w celu wylania oleju do odpowiedniego pojemnika. </string>
    <string name="Uklad_smarowania_6">Układ smarowania: Przetnij drut zabezpieczający na korku filtra siatkowego oleju umieszczonym w misce olejowej po prawej stronie śmigłowca pomiędzy podstawą wydechu cylindra Nr 4, a rurą wlotową cylindra Nr 6. </string>
    <string name="Uklad_smarowania_7">Układ smarowania: Wyjmij, dokonaj przeglądu, oczyść i zabuduj z powrotem filtr siatkowy zasysania. Zabezpieczyć korek. </string>
    <string name="Uklad_smarowania_8">Układ smarowania: Przetnij drut zabezpieczający na filtrze i poluzuj filtr używając klucza.</string>
    <string name="Uklad_smarowania_9">Układ smarowania: Umieścić odpowiedni pojemnik poniżej i od wewnętrznej strony iskrownika w celu zebrania oleju pozostałego w filtrze lub obudowie filtra siatkowego oraz powoli odkręć filtr. Nie dopuścić, aby olej spłynął na obudowę iskrownika. </string>
    <string name="Uklad_smarowania_10">Układ smarowania: Wymontować filtr i rozciąć go w celu przeprowadzenia przeglądu. </string>
    <string name="Uklad_smarowania_11">Układ smarowania: Zamontować nowy filtr zgodnie z instrukcjami wydrukowanymi na filtrze (dokręcić momentem 23Nm) i zabezpieczyć drutem (zabezpieczenia nie stosuje się w przypadku filtra B123–2/AA48112). Stosować wyłącznie filtr Champion CH48108, CH48108–1 lub Robinson B123–1. </string>
    <string name="Uklad_smarowania_12">Układ smarowania: Zamknąć zawór do szybkiego drenażu i napełnić miskę olejową 9 kwartami (8,5 l) oleju odpowiedniego gatunku według zaleceń zamieszczonych w Instrukcji Użytkowania w Locie. </string>
    <string name="Uklad_smarowania_13">Układ smarowania: Uruchomić śmigłowiec. Potwierdzić, że ciśnienie pojawia się w ciągu 30 sekund. Przeprowadzić kilkuminutową  próbę naziemna, wyłączyć silnik i potwierdzić brak wycieków. </string>
    <string name="Uklad_smarowania_14">Układ smarowania: Sprawdzić poziom oleju przy użyciu prętowego wskaźnika ilości oleju. </string>
    <string name="Uklad_zaplonowy_1">Układ zapłonowy: Jeżeli widoczne są zanieczyszczenia świec zapłonowych, oczyścić je oraz sprawdzić odstęp elektrod. Zamienić miejscami świece dolne z górnymi. Wymienić (na now), jeżeli to konieczne. Świece dokręcić momentem 47,5Nm. </string>
    <string name="Uklad_zaplonowy_2">Układ zapłonowy: Sprawdzić wyprowadzenia przewodów ze świec oraz rdzenie ceramiczne świec zapłonowych na okoliczność korozji oraz nagaru. Stan ten świadczy albo o nieszczelności świec zapłonowych, niewłaściwym oczyszczeniu ścianek świec zapłonowych lub końcówek złącznych. Tam gdzie stan taki wykryto, oczyścić końcówki kabli, ścianki świec zapłonowych oraz rdzeni ceramicznych za pomocą suchej, czystej szmatki lub czystej szmatki zwilżonej ketonem metylo-etylowym. Wszystkie części winny być oczyszczone i osuszone przez zamontowaniem. </string>
    <string name="Uklad_zaplonowy_3">Układ zapłonowy: Sprawdzić wiązki kabli układu zapłonowego co do pewności mocowania zacisków montażowych oraz upewnić się, że końcówki na świecach zapłonowych i iskrownikach są szczelne. </string>
    <string name="Uklad_paliwowy_dolotowy_1">Układ paliwowy i dolotowy: Sprawdzić przewody pompki zastrzykującej na okoliczność przecieków oraz pewności zacisków. Wymontować i oczyścić sitka dolotowe paliwa. Sprawdzić układ sterowania składem mieszanki oraz połączenia sterowania przepustnicą co do zakresu przemieszczeń i swobody ruchu; zabezpieczyć zaciski i przesmarować jeżeli to konieczne. </string>
    <string name="Uklad_paliwowy_dolotowy_2">Układ paliwowy i dolotowy: Sprawdzić elementy układu dolotowego powietrza na okoliczność nieszczelności, pewności mocowania, uszkodzeń filtra; obecność kurzu lub innych stałych materiałów w przewodach dolotowych wskazuje na nieodpowiednie dbanie o filtr lub na uszkodzenie filtra. </string>
    <string name="Uklad_paliwowy_dolotowy_3">Układ paliwowy i dolotowy: Sprawdzić przewody odpowietrzające co do obecności wycieków paliwa lub oleju; jeżeli są one obecne pompa paliwowa może wymagać wymiany. </string>
    <string name="Uklad_wydechowy_1">Układ wydechowy: Sprawdzić kołnierze mocujące przy oknach wylotowych cylindrów ze względu na występowanie ewentualnych nieszczelności. Jeżeli są one obluzowane, muszą być wymontowane i splanowane, zanim zostaną zmontowane i dokręcone. Sprawdzić kolektory wydechowe co do ich ogólnego stan</string>
    <string name="Uklad_chlodzenia_1">Układ chłodzenia: Sprawdzić osłony, deflektory i uszczelki deflektorów na okoliczność uszkodzeń i pewności zamocowania. Jakkolwiek uszkodzona lub brakująca część układu chłodzenia musi być naprawiona lub wymieniona przed wznowieniem użytkowania statku powietrznego. </string>
    <string name="Cylindry_1">Cylindry: Sprawdzić pokrywy skrzynki dźwigni zaworowych na okoliczność przecieków oleju. Jeżeli się pojawiły, wymienić uszczelkę i dokręcić śruby zadanym momentem 50 funto-cali (5,5 Nm).</string>
    <string name="Cylindry_2">Cylindry: Sprawdzić cylindry na okoliczność występowania nadmiernego nagrzewania się, co jest wskazywane przez nadpalenia farby pokrywającej cylinder. Stan ten wskazuje na wewnętrzne uszkodzenie cylindra oraz, jeżeli jest to wykryte,przyczyna tego musi być określona i skorygowana przed wznowieniem użytkowania statku powietrznego. </string>
    <string name="Cylindry_3">Cylindry: Mocne przebarwienie oraz pojawienie się wycieku w miejscu styku głowicy i tulei cylindra zwykle spowodowane jest wydzielaniem smaru na gwincie użytego podczas montażu tulei w fabryce, lub spowodowane nieznacznym przedmuchem gazu, który ustaje po tym, gdy cylinder przez pewien czas popracuje. Ten stan nie jest ani szkodliwy ani pogarszający osiągi działanie silnika. Jeżeli zostanie wykazane, że przedmuch (wyciek) przekracza ten stan, cylinder winien być wymieniony. </string>
    <string name="Pokrywy_lukow_ins_dost_1">Pokrywy luków inspekcyjnych i dostępowych:  Usunięcie ciał obcych: </string>
    <string name="Pokrywy_lukow_ins_dost_1_1">Pokrywy luków inspekcyjnych i dostępowych: Sprawdź, czy wszystkie narzędzia, luźne elementy konstrukcyjne, szmaty i inne obce elementy zostały usunięte ze śmigłowca. </string>
    <string name="Pokrywy_lukow_ins_dost_2">Pokrywy luków inspekcyjnych i dostępowych: Zamknięcie i zabezpieczenie luków: </string>
    <string name="Pokrywy_lukow_ins_dost_2_1">Pokrywy luków inspekcyjnych i dostępowych: Zamontować/zamknąć wszystkie pokrywy luków inspekcyjnych zdemontowanych podczas wykonywania przeglądu. Sprawdzić zabezpieczenie wszystkich pokryw. </string>
    <string name="Caution">CAUTION! Disconnect BATTERY before all work. </string>
    <string name="Replace_main_gearbox_oil_filter">Replace main gearbox oil filter § 12–12 </string>
    <string name="Replace_main_gearbox_oil_filter_1">Drain main rotor gearbox oil per § 12–11, if required. </string>
    <string name="Replace_main_gearbox_oil_filter_2">Cut and discard safety wire securing bowl &amp; indicator assembly to head assembly. Unscrew bowl and remove and discard element. Remove o-ring and back-up ring from head assembly. </string>
    <string name="Replace_main_gearbox_oil_filter_3">Clean and dry bowl assembly; install new F651–3 seals kit and F651–2 element. </string>
    <string name="Replace_main_gearbox_oil_filter_4">Hand-tighten bowl assembly until tight against head assembly. Install 0.032-inch diameter lockwire and safety bowl to head. </string>
    <string name="Replace_main_gearbox_oil_filter_5">Service main rotor gearbox per § 12–11. </string>
    <string name="Replace_main_gearbox_oil_12to11">Replace main gearbox oil per § 12–11 </string>
    <string name="Replace_main_gearbox_oil_12to11_A">Draining Fluid </string>
    <string name="Replace_main_gearbox_oil_12to11_A_1">Refer to Figure 12–1. Disconnect chip detector wiring, as required. Remove chip detector from housing. </string>
    <string name="Replace_main_gearbox_oil_12to11_A_2">Refer to Figure 12–2. Insert MT054–1 drain assembly into chip detector housing. Position drain house overboard into a suitable drain container. Jam wedge between support panel stiffener and drain assembly fitting to open valve. </string>
    <string name="Replace_main_gearbox_oil_12to11_B">Adding Fluid </string>
    <string name="Replace_main_gearbox_oil_12to11_B_1">Install chip detector per Section 12-13, if removed.</string>
</resources>